modificado el index.html

--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
     </h1>
     <p>Desarollo de software villa el libertador calle defensa 
     </p>
+    <h2> Materias a cursar </h2>
+    <ol>
+        <li>practica</li>
+        <li>programacion</li>
+        <li>Sistemas Operativos</li>
+    <h3>Intereses</h3>
+        <ul>Peliculas</ul>
+        <ul>series</ul>
+        <ul>Video juegos</ul>
+        <ul>Youtube</ul>
+    </ol>
 </body>
 </html>
