agregado una imagen al index.html

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
         <ul>Video juegos</ul>
         <ul>Youtube</ul>
     </ol>
+    <img src="Trooper.jpeg" alt="Soldado del imperio">
 </body>
 </html>
